// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h3
  class="sc-bdVaJa fTItwS"
>
  Heading
</h3>
`;

exports[`renders "Heading" with color prop 2`] = `
<h3
  class="sc-bdVaJa SRafe"
>
  Heading
</h3>
`;

exports[`renders "Heading" with l prop 1`] = `
<h3
  class="sc-bdVaJa jxsFpG"
>
  Heading
</h3>
`;

exports[`renders "Heading" with margin 1`] = `
<h3
  class="sc-bdVaJa gXYKxp"
>
  Heading
</h3>
`;

exports[`renders "Heading" with no props 1`] = `
<h3
  class="sc-bdVaJa kFFkMX"
>
  Heading
</h3>
`;

exports[`renders "Heading" with s prop 1`] = `
<h3
  class="sc-bdVaJa fSHXtJ"
>
  Heading
</h3>
`;
